--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Cornell University Battlebots
+title: Cornell University Combat Robotics
 
 # Short description of your site
 description: A competitive combat robot team 
