--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: Cornell University Combat Robotics
+title: CUCR
 
 # Short description of your site
-description: A competitive combat robot team 
+description: Combat Robotics
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
